[gd_scene load_steps=2 format=3 uid="uid://n68ynnic24d0"]

[ext_resource type="Script" uid="uid://c361ou22tttj2" path="res://Scripts/UI/NewUpgradeCard.gd" id="1_e78r6"]

[node name="NewUpgradeCard" type="PanelContainer"]
custom_minimum_size = Vector2(220, 400)
script = ExtResource("1_e78r6")

[node name="CardLayout" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(220, 440)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CardLayout"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
horizontal_alignment = 1

[node name="IconTextureRect" type="TextureRect" parent="CardLayout"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 5
stretch_mode = 3

[node name="DescriptionLabel" type="Label" parent="CardLayout"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 12
autowrap_mode = 2

[node name="SelectButton" type="Button" parent="CardLayout"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 8
text = "Choose"
